<resources>
    <string name="app_name">PodcastBeMine</string>

    <!-- For homepage -->
    <string name="homepage_icon_contentDescription">radio icon</string>

    <!-- For main menu -->
    <string name="main_menu_title">Hello, Jessica.</string>
    <string name="main_menu_subtitle">What would you like to do?</string>
    <string name="main_menu_search_btn">SEARCH PODCASTS</string>
    <string name="main_menu_fav_btn">MY FAVORITES</string>
    <string name="main_menu_logout_btn">LOGOUT</string>

    <!-- For search page -->
    <string name="search_title">Search</string>
    <string name="search_btn">SEARCH</string>
    <string name="search_label">Search keyword</string>
    <string name="episode_label">Search for episodes or podcasts?</string>
    <string-array name="search_option_menu">
        <item>Episode</item>
        <item>Podcast</item>
    </string-array>

    <!-- For podcast list page -->
    <string name="title_podcast_list">Podcasts</string>
    <string name="title_podcast_detail">Podcast Detail</string>
    <string name="podcast_api_error">Error fetching podcasts.\nTry again later.</string>
    <string name="no_podcasts_found">No Results Found</string>
    <string name="podcast_db_error">Error reading database.</string>

    <!-- For podcast details page -->
    <string name="podcast_details">test details about the podcast.fdsafasfas.fsdafas fdsa.fdsas.
        fdsafds fdsakjfas fdsa fadsf. dsfas    fdsaf fdsaf afdsa fa.f dasljdfsaf;das
    dsfalkjf fdsa;fj dsajfasdfjl; jfdsa;fj dsaf;kl asfuaoisuf;djsa fdsa;fj aasfsfa
    afdasfjdas ;fdjsa;fj;a djfk;askfjk asdfads;fjkdsafoweiurifdvncx
    dfsalfj fdsn,xcnv asdofuoewiu fsadfja as dsf;as </string>
    <string name="podcast_author">By Boba Fett</string>
    <string name="podcast_audio_length">Audio: 145 mins</string>
    <string name="podcast_thumbnail_contentDescription">Podcast thumbnail</string>
    <string name="podcast_start_btn">START PODCAST</string>
    <string name="podcast_widget_btn">ADD TO WIDGET</string>

    <!-- For play podcast page -->
    <string name="play_podcast_contentDescription">Audio of podcast playing</string>
    <string name="play_podcast_error">Error playing podcast.\nTry again later.</string>
    <string name="play_podcast_no_url">Podcast does not have an audio file.</string>

    <!-- For sign in error page -->
    <string name="google_error">Error signing in.\nTry again later.</string>

    <!-- universal -->
    <string name="no_internet_error">No Internet Connection</string>
    <string name="unknown_error">Unknown Error.\nTry again later.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
