<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/main_menu_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_menu_subtitle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_menu_search_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/light_blue_button"
            android:text="@string/main_menu_search_btn" />

        <Button
            android:id="@+id/main_menu_fav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/light_blue_button"
            android:text="@string/main_menu_fav_btn" />


        <Button
            android:id="@+id/main_menu_logout_btn"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:background="@color/pink_button"
            android:text="@string/main_menu_logout_btn" />


    </LinearLayout>

</ScrollView>

